--- a/packages/processors/postcss-processor/package.json
+++ b/packages/processors/postcss-processor/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/postcss-processor",
-	"version": "0.1.11",
+	"version": "0.1.12",
 	"description": "Postcss processor, transform string or postcss file to css",
 	"keywords": ["postcss", "processor", "css"],
 	"license": "MIT",
@@ -24,6 +24,9 @@
 		"postcss": "^8.4.32",
 		"postcss-import": "^15.1.0",
 		"tailwindcss": "^3.4.1"
+	},
+	"devDependencies": {
+		"postcss-simple-vars": "^7.0.1"
 	},
 	"exports": {
 		".": "./src/postcss-processor.ts",
