feature(#61): Enhanced the configuration setup process by implementing a more intuitive and user-friendly Config Builder

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -2,7 +2,7 @@ preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
 
 [test]
 preload = [
-  "./setup-test.ts",
+  "./scripts/setup-test.ts",
   "@ecopages/bun-postcss-loader",
   "@ecopages/bun-mdx-kitajs-loader",
 ]
