--- a/biome.json
+++ b/biome.json
@@ -17,6 +17,9 @@
 			},
 			"correctness": {
 				"useJsxKeyInIterable": "off"
+			},
+			"complexity": {
+				"noStaticOnlyClass": "error"
 			}
 		}
 	},
@@ -52,6 +55,14 @@
 	"json": {
 		"formatter": {
 			"trailingCommas": "none"
+		}
+	},
+	"css": {
+		"linter": {
+			"enabled": false
+		},
+		"formatter": {
+			"enabled": false
 		}
 	}
 }
