--- a/biome.json
+++ b/biome.json
@@ -53,5 +53,13 @@
 		"formatter": {
 			"trailingCommas": "none"
 		}
+	},
+	"css": {
+		"linter": {
+			"enabled": false
+		},
+		"formatter": {
+			"enabled": false
+		}
 	}
 }
