--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -8,7 +8,7 @@
 		"jsx": "react-jsx",
 		"jsxImportSource": "@kitajs/html",
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "Bundler",
 		"noImplicitOverride": true,
 		"paths": {
 			"@/*": ["./src/*"]
@@ -22,7 +22,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ES2021",
-		"types": ["bun-types", "@ecopages/core"],
+		"types": ["bun-types"],
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true
 	}
