--- a/biome.json
+++ b/biome.json
@@ -29,7 +29,8 @@
 			".nyc_output",
 			".vscode",
 			".env",
-			".eco"
+			".eco",
+			"packages/processors/postcss-processor/src/test/css/external-plugins.css"
 		]
 	},
 	"javascript": {
@@ -52,14 +53,6 @@
 	"json": {
 		"formatter": {
 			"trailingCommas": "none"
-		}
-	},
-	"css": {
-		"linter": {
-			"enabled": false
-		},
-		"formatter": {
-			"enabled": false
 		}
 	}
 }
