--- a/package.json
+++ b/package.json
@@ -3,36 +3,36 @@
 	"private": true,
 	"version": "0.1.15",
 	"scripts": {
-		"watch:dev:playground": "bun run --filter @ecopages/playground watch:dev | tee /dev/null",
-		"dev:playground": "bun run --filter @ecopages/playground dev | tee /dev/null",
-		"build:playground": "bun run --filter @ecopages/playground build | tee /dev/null",
-		"start:playground": "bun run --filter @ecopages/playground start | tee /dev/null",
-		"preview:playground": "bun run --filter @ecopages/playground preview | tee /dev/null",
-		"watch:dev:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx watch:dev | tee /dev/null",
-		"dev:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx dev | tee /dev/null",
-		"build:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx build | tee /dev/null",
-		"start:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx start | tee /dev/null",
-		"preview:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx preview | tee /dev/null",
-		"dev:starter-ghtml": "bun run --filter @ecopages/starter-ghtml dev | tee /dev/null",
-		"build:starter-ghtml": "bun run --filter @ecopages/starter-ghtml build | tee /dev/null",
-		"start:starter-ghtml": "bun run --filter @ecopages/starter-ghtml start | tee /dev/null",
-		"preview:starter-ghtml": "bun run --filter @ecopages/starter-ghtml preview | tee /dev/null",
-		"dev:docs": "bun run --filter @ecopages/docs dev | tee /dev/null",
-		"build:docs": "bun run --filter @ecopages/docs build | tee /dev/null",
-		"start:docs": "bun run --filter @ecopages/docs start | tee /dev/null",
-		"preview:docs": "bun run --filter @ecopages/docs preview | tee /dev/null",
-		"watch:dev:react-app": "bun run --filter @ecopages/react-app watch:dev | tee /dev/null",
-		"dev:react-app": "bun run --filter @ecopages/react-app dev | tee /dev/null",
-		"build:react-app": "bun run --filter @ecopages/react-app build | tee /dev/null",
-		"start:react-app": "bun run --filter @ecopages/react-app start | tee /dev/null",
-		"preview:react-app": "bun run --filter @ecopages/react-app preview | tee /dev/null",
-		"clean": "clear && rm -rf node_modules bun.lockb && bun install",
+		"watch:dev:playground": "bun run --elide-lines 0 --filter @ecopages/playground watch:dev",
+		"dev:playground": "bun run --elide-lines 0 --filter @ecopages/playground dev",
+		"build:playground": "bun run --elide-lines 0 --filter @ecopages/playground build",
+		"start:playground": "bun run --elide-lines 0 --filter @ecopages/playground start",
+		"preview:playground": "bun run --elide-lines 0 --filter @ecopages/playground preview",
+		"watch:dev:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx watch:dev",
+		"dev:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx dev",
+		"build:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx build",
+		"start:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx start",
+		"preview:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx preview",
+		"dev:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml dev",
+		"build:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml build",
+		"start:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml start",
+		"preview:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml preview",
+		"dev:docs": "bun run --elide-lines 0 --filter @ecopages/docs dev",
+		"build:docs": "bun run --elide-lines 0 --filter @ecopages/docs build",
+		"start:docs": "bun run --elide-lines 0 --filter @ecopages/docs start",
+		"preview:docs": "bun run --elide-lines 0 --filter @ecopages/docs preview",
+		"watch:dev:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app watch:dev",
+		"dev:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app dev",
+		"build:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app build",
+		"start:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app start",
+		"preview:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app preview",
+		"clean": "clear && rm -rf node_modules bun.lock && bun install",
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --write .",
 		"lint-staged": "lint-staged",
 		"jsr:sync-version": "bun scripts/jsr-sync-version.ts",
 		"prerelease": "bun test --coverage && bun run jsr:sync-version",
-		"release": "bun run --filter '*' release:jsr | tee /dev/null",
+		"release": "bun run --elide-lines 0 --filter '*' release:jsr",
 		"bump:patch": "bun run scripts/bump-version.ts patch && bun run jsr:sync-version",
 		"bump:minor": "bun run scripts/bump-version.ts minor && bun run jsr:sync-version",
 		"bump:major": "bun run scripts/bump-version.ts major && bun run jsr:sync-version"
