--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/lit",
-	"version": "0.1.15",
+	"version": "0.1.16",
 	"description": "Ecopages lit integration",
 	"keywords": ["ecopages", "lit", "plugin"],
 	"license": "MIT",
@@ -8,6 +8,20 @@
 	"types": "./src/lit.plugin.ts",
 	"type": "module",
 	"files": ["src"],
+	"exports": {
+		".": {
+			"default": "./src/index.ts",
+			"types": "./src/index.ts"
+		},
+		"./lit.plugin": {
+			"default": "./src/lit.plugin.ts",
+			"types": "./src/lit.plugin.ts"
+		},
+		"./styled-mixin": {
+			"default": "./src/styled-mixin.ts",
+			"types": "./src/styled-mixin.ts"
+		}
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ecopages/ecopages.git",
@@ -17,8 +31,9 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
-		"@lit-labs/ssr": "^3.2.2",
-		"lit": "^3.1.3"
+		"@lit-labs/ssr": "^3.3.0",
+		"@lit-labs/ssr-client": "^1.1.7",
+		"lit": "^3.2.1"
 	},
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*"
