--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -4,9 +4,9 @@
 	"scripts": {
 		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/main/build-app.ts --watch-lib",
 		"dev": "ecopages dev",
-		"build": "ecopages build",
-		"start": "ecopages start",
-		"preview": "ecopages preview"
+		"build": "NODE_ENV=production ecopages build",
+		"start": "NODE_ENV=production ecopages start",
+		"preview": "NODE_ENV=production ecopages preview"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
@@ -14,15 +14,11 @@
 		"@ecopages/mdx": "workspace:*",
 		"@ecopages/bun-mdx-kitajs-loader": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
-		"@types/react": "npm:types-react@rc",
-		"@types/react-dom": "npm:types-react-dom@rc"
-	},
-	"overrides": {
-		"@types/react": "npm:types-react@rc",
-		"@types/react-dom": "npm:types-react-dom@rc"
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0"
 	},
 	"dependencies": {
-		"react": "19.0.0-rc-58af67a8f8-20240628",
-		"react-dom": "19.0.0-rc-58af67a8f8-20240628"
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
 	}
 }
