--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -8,6 +8,14 @@
 	"types": "./src/react.plugin.ts",
 	"type": "module",
 	"files": ["src"],
+	"exports": {
+		".": {
+			"default": "./src/react.plugin.ts",
+			"types": "./src/react.plugin.ts"
+		},
+		"./react-esm": "./react-esm.ts",
+		"./react-dev-esm": "./react-dev-esm.ts"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/ecopages/ecopages.git",
@@ -16,15 +24,11 @@
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*",
 		"@ecopages/logger": "^0.1.2",
-		"react": "19.0.0-rc-58af67a8f8-20240628",
-		"react-dom": "19.0.0-rc-58af67a8f8-20240628"
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
-		"@types/react": "npm:types-react@rc",
-		"@types/react-dom": "npm:types-react-dom@rc"
-	},
-	"overrides": {
-		"@types/react": "npm:types-react@rc",
-		"@types/react-dom": "npm:types-react-dom@rc"
+		"@types/react": "^19.0.0",
+		"@types/react-dom": "^19.0.0"
 	}
 }
