chore: updated deps and lock

--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -26,12 +26,14 @@
 	},
 	"peerDependencies": {
 		"@ecopages/core": "workspace:*",
-		"@ecopages/logger": "^0.1.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0"
+	},
+	"dependencies": {
+		"@ecopages/logger": "^0.1.2"
 	}
 }
