--- a/package.json
+++ b/package.json
@@ -5,34 +5,34 @@
 	"scripts": {
 		"watch:dev:playground": "bun run --elide-lines 0 --filter @ecopages/playground watch:dev",
 		"dev:playground": "bun run --elide-lines 0 --filter @ecopages/playground dev",
-		"build:playground": "bun run --elide-lines 0 --filter @ecopages/playground build",
-		"start:playground": "bun run --elide-lines 0 --filter @ecopages/playground start",
-		"preview:playground": "bun run --elide-lines 0 --filter @ecopages/playground preview",
-		"watch:dev:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx watch:dev",
+		"build:playground": "bun run --filter @ecopages/playground build",
+		"start:playground": "bun run --filter @ecopages/playground start",
+		"preview:playground": "bun run --filter @ecopages/playground preview",
+		"watch:dev:starter-lit-jsx": "bun run --elide-lines 0  --filter @ecopages/starter-lit-jsx watch:dev",
 		"dev:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx dev",
-		"build:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx build",
-		"start:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx start",
-		"preview:starter-lit-jsx": "bun run --elide-lines 0 --filter @ecopages/starter-lit-jsx preview",
+		"build:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx build",
+		"start:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx start",
+		"preview:starter-lit-jsx": "bun run --filter @ecopages/starter-lit-jsx preview",
 		"dev:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml dev",
-		"build:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml build",
-		"start:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml start",
-		"preview:starter-ghtml": "bun run --elide-lines 0 --filter @ecopages/starter-ghtml preview",
+		"build:starter-ghtml": "bun run --filter @ecopages/starter-ghtml build",
+		"start:starter-ghtml": "bun run --filter @ecopages/starter-ghtml start",
+		"preview:starter-ghtml": "bun run --filter @ecopages/starter-ghtml preview",
 		"dev:docs": "bun run --elide-lines 0 --filter @ecopages/docs dev",
-		"build:docs": "bun run --elide-lines 0 --filter @ecopages/docs build",
-		"start:docs": "bun run --elide-lines 0 --filter @ecopages/docs start",
-		"preview:docs": "bun run --elide-lines 0 --filter @ecopages/docs preview",
+		"build:docs": "bun run --filter @ecopages/docs build",
+		"start:docs": "bun run --filter @ecopages/docs start",
+		"preview:docs": "bun run --filter @ecopages/docs preview",
 		"watch:dev:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app watch:dev",
 		"dev:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app dev",
-		"build:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app build",
-		"start:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app start",
-		"preview:react-app": "bun run --elide-lines 0 --filter @ecopages/react-app preview",
+		"build:react-app": "bun run --filter @ecopages/react-app build",
+		"start:react-app": "bun run --filter @ecopages/react-app start",
+		"preview:react-app": "bun run --filter @ecopages/react-app preview",
 		"clean": "clear && rm -rf node_modules bun.lock && bun install",
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --write .",
 		"lint-staged": "lint-staged",
 		"jsr:sync-version": "bun scripts/jsr-sync-version.ts",
 		"prerelease": "bun test --coverage && bun run jsr:sync-version",
-		"release": "bun run --elide-lines 0 --filter '*' release:jsr",
+		"release": "bun run --filter '*' release:jsr",
 		"bump:patch": "bun run scripts/bump-version.ts patch && bun run jsr:sync-version",
 		"bump:minor": "bun run scripts/bump-version.ts minor && bun run jsr:sync-version",
 		"bump:major": "bun run scripts/bump-version.ts major && bun run jsr:sync-version"
