--- a/packages/integrations/react/package.json
+++ b/packages/integrations/react/package.json
@@ -14,7 +14,8 @@
 			"types": "./src/react.plugin.ts"
 		},
 		"./react-esm": "./react-esm.ts",
-		"./react-dev-esm": "./react-dev-esm.ts"
+		"./react-dev-esm": "./react-dev-esm.ts",
+		"./react-dom-esm": "./react-dom-esm.ts"
 	},
 	"repository": {
 		"type": "git",
