feature(#74) Added ImageProcessor and Picturegenerator into @ecopages/image-processor package

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"@ecopages/bun-inline-css-plugin": "workspace:*",
 		"@ecopages/logger": "latest",
+		"@ecopages/image-processor": "workspace:*",
 		"@ecopages/postcss-processor": "workspace:*",
 		"@parcel/watcher": "^2.4.0",
 		"ghtml": "^2.1.2"
