feature(#74) Added picture generator, now images are automatically optimized

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,8 @@
 {
-  "recommendations": ["biomejs.biome", "runem.lit-plugin", "wix.vscode-import-cost"],
-  "unwantedRecommendations": []
+  "recommendations": [
+    "biomejs.biome",
+    "runem.lit-plugin",
+    "wix.vscode-import-cost",
+    "bradlc.vscode-tailwindcss"
+  ],
 }
