--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -23,6 +23,10 @@
 		".": {
 			"default": "./src/image-processor.ts",
 			"types": "./src/image-processor.ts"
+		},
+		"./picture-generator": {
+			"default": "./src/picture-generator.ts",
+			"types": "./src/picture-generator.ts"
 		}
 	}
 }
