--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
 	"editor.stickyScroll.enabled": false,
-	"workbench.tree.enableStickyScroll": false
+	"workbench.tree.enableStickyScroll": false,
+	"files.associations": {
+		"*.lit.tsx": "typescriptreact",
+		"*.kita.tsx": "typescriptreact"
+	},
+	"tailwindCSS.includeLanguages": {
+		"typescript": "javascript",
+		"typescriptreact": "javascript"
+	}
 }
