feature(#74) Improved responsiveness of picture srcset

--- a/playground/global/package.json
+++ b/playground/global/package.json
@@ -6,7 +6,7 @@
 		"dev": "ecopages dev",
 		"build": "ecopages build",
 		"start": "ecopages start",
-		"preview": "ecopages preview"
+		"preview": "rm -rf __cache__ && ecopages preview"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
