feature(#74) Replaced picture with img element to permits better compatibility with selectors, etc

--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -24,9 +24,9 @@
 			"default": "./src/image-processor.ts",
 			"types": "./src/image-processor.ts"
 		},
-		"./picture-generator": {
-			"default": "./src/picture-generator.ts",
-			"types": "./src/picture-generator.ts"
+		"./image-rewriter": {
+			"default": "./src/image-rewriter.ts",
+			"types": "./src/image-rewriter.ts"
 		}
 	}
 }
