feature/74 Improved the way images are handled in the client. Added a comprehensive set of utils for client rendered images

--- a/biome.json
+++ b/biome.json
@@ -17,6 +17,9 @@
 			},
 			"correctness": {
 				"useJsxKeyInIterable": "off"
+			},
+			"complexity": {
+				"noStaticOnlyClass": "off"
 			}
 		}
 	},
