--- a/packages/processors/image-processor/tsconfig.json
+++ b/packages/processors/image-processor/tsconfig.json
@@ -15,6 +15,6 @@
 		"target": "ES2021",
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true,
-		"types": ["bun-types"]
+		"types": ["bun-types", "./types.d.ts"]
 	}
 }
