--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -67,6 +67,10 @@
 			"types": "./src/utils/component-dependencies-utils.ts",
 			"default": "./src/utils/component-dependencies-utils.ts"
 		},
+		"./processors/processor": {
+			"types": "./src/processors/processor.ts",
+			"default": "./src/processors/processor.ts"
+		},
 		"./html": {
 			"import": "./src/utils/html.ts",
 			"require": "./src/utils/html.ts"
