feature/74 Improved transformation of html and dependency service

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,9 +47,9 @@
 			"types": "./src/main/config-builder.ts",
 			"default": "./src/main/config-builder.ts"
 		},
-		"./dependency-service": {
-			"types": "./src/main/dependency-service.ts",
-			"default": "./src/main/dependency-service.ts"
+		"./services/dependency-service": {
+			"types": "./src/services/dependency.service.ts",
+			"default": "./src/services/dependency.service.ts"
 		},
 		"./route-renderer/integration-renderer": {
 			"types": "./src/route-renderer/integration-renderer.ts",
