feature/74 Exportin image component as string and react

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
 			"suspicious": {
 				"noExplicitAny": "off",
 				"noEmptyInterface": "off",
-				"noConfusingVoidType": "off"
+				"noConfusingVoidType": "off",
+				"noArrayIndexKey": "off"
 			},
 			"correctness": {
 				"useJsxKeyInIterable": "off"
