--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -27,6 +27,14 @@
 		"./image-renderer-provider": {
 			"default": "./src/shared/image-renderer-provider.ts",
 			"types": "./src/shared/image-renderer-provider.ts"
+		},
+		"./image-component/as-string": {
+			"default": "./src/image-component/as-string.ts",
+			"types": "./src/image-component/as-string.ts"
+		},
+		"./image-component/react": {
+			"default": "./src/image-component/react.ts",
+			"types": "./src/image-component/react.ts"
 		}
 	}
 }
