--- a/biome.json
+++ b/biome.json
@@ -13,10 +13,14 @@
 			"suspicious": {
 				"noExplicitAny": "off",
 				"noEmptyInterface": "off",
-				"noConfusingVoidType": "off"
+				"noConfusingVoidType": "off",
+				"noArrayIndexKey": "off"
 			},
 			"correctness": {
 				"useJsxKeyInIterable": "off"
+			},
+			"complexity": {
+				"noStaticOnlyClass": "off"
 			}
 		}
 	},
