--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Publish package @ecopages/postcss-processor
         run: bun run --filter @ecopages/postcss-processor release:jsr
 
+      - name: Publish package @ecopages/image-processor
+        run: bun run --filter @ecopages/image-processor release:jsr
+
       - name: Publish package @ecopages/bun-inline-css-plugin
         run: bun run --filter @ecopages/bun-inline-css-plugin release:jsr
 
