--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -15,8 +15,11 @@
 	"scripts": {
 		"release:jsr": "bunx jsr publish"
 	},
+	"peerDependencies": {
+		"@ecopages/core": "workspace:*"
+	},
 	"dependencies": {
-		"@ecopages/core": "workspace:*",
+		"@ecopages/logger": "^0.2.0",
 		"sharp": "^0.33.5"
 	},
 	"exports": {
