--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -16,12 +16,12 @@
 		"release:jsr": "bunx jsr publish"
 	},
 	"peerDependencies": {
-		"@ecopages/core": "workspace:*",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"@ecopages/core": "workspace:*"
 	},
 	"dependencies": {
 		"@ecopages/logger": "^0.2.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
 		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
