feature/74-virtual-modules Added virtual modules, now there is more uniformed way to play with images both in the server and the client. Added the possibility for the processor to provide plugins to the bundler, updated and tested on both global and react playground

--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -33,9 +33,9 @@
 			"default": "./src/plugin.ts",
 			"types": "./src/plugin.ts"
 		},
-		"./image-renderer-provider": {
-			"default": "./src/shared/image-renderer-provider.ts",
-			"types": "./src/shared/image-renderer-provider.ts"
+		"./types": {
+			"default": "./index.d.ts",
+			"types": "./index.d.ts"
 		},
 		"./component/html": {
 			"default": "./src/component/html.ts",
