feature/74-virtual-modules Improved virtual module types and the way we can use the images, updated the playground

--- a/packages/processors/image-processor/tsconfig.json
+++ b/packages/processors/image-processor/tsconfig.json
@@ -15,6 +15,6 @@
 		"target": "ES2021",
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true,
-		"types": ["bun-types", "./modules.d.ts"]
+		"types": ["bun-types"]
 	}
 }
