--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -30,12 +30,11 @@
 	},
 	"exports": {
 		".": {
-			"default": "./src/plugin.ts",
-			"types": "./src/plugin.ts"
+			"default": "./src/index.ts",
+			"types": "./src/index.ts"
 		},
 		"./types": {
-			"default": "./index.d.ts",
-			"types": "./index.d.ts"
+			"types": "./src/types.ts"
 		},
 		"./component/html": {
 			"default": "./src/component/html.ts",
@@ -44,6 +43,11 @@
 		"./component/react": {
 			"default": "./src/component/react.ts",
 			"types": "./src/component/react.ts"
+		}
+	},
+	"typesVersions": {
+		"*": {
+			"ecopages:images": ["./virtual-module.d.ts"]
 		}
 	}
 }
