--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/image-processor",
-	"version": "0.1.20",
+	"version": "0.1.21",
 	"description": "Image processor, transform and optimize images for web",
 	"keywords": ["image", "processor"],
 	"license": "MIT",
@@ -30,12 +30,11 @@
 	},
 	"exports": {
 		".": {
-			"default": "./src/plugin.ts",
-			"types": "./src/plugin.ts"
+			"default": "./src/index.ts",
+			"types": "./src/index.ts"
 		},
-		"./image-renderer-provider": {
-			"default": "./src/shared/image-renderer-provider.ts",
-			"types": "./src/shared/image-renderer-provider.ts"
+		"./types": {
+			"types": "./src/types.ts"
 		},
 		"./component/html": {
 			"default": "./src/component/html.ts",
@@ -44,6 +43,11 @@
 		"./component/react": {
 			"default": "./src/component/react.ts",
 			"types": "./src/component/react.ts"
+		}
+	},
+	"typesVersions": {
+		"*": {
+			"ecopages:images": ["./virtual-module.d.ts"]
 		}
 	}
 }
