feature/74 Improved style attributes + enhanced examples and added starter jsx with image-processor, review tests

--- a/playground/react/package.json
+++ b/playground/react/package.json
@@ -12,6 +12,7 @@
 		"@ecopages/core": "workspace:*",
 		"@ecopages/radiant": "^0.2.0",
 		"@ecopages/react": "workspace:*",
+		"@ecopages/image-processor": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0"
