--- a/packages/integrations/lit/package.json
+++ b/packages/integrations/lit/package.json
@@ -4,14 +4,14 @@
 	"description": "Ecopages lit integration",
 	"keywords": ["ecopages", "lit", "plugin"],
 	"license": "MIT",
-	"main": "./src/plugin.ts",
-	"types": "./src/plugin.ts",
+	"main": "./src/lit.plugin.ts",
+	"types": "./src/lit.plugin.ts",
 	"type": "module",
 	"files": ["src"],
 	"exports": {
 		".": {
-			"default": "./src/plugin.ts",
-			"types": "./src/plugin.ts"
+			"default": "./src/lit.plugin.ts",
+			"types": "./src/lit.plugin.ts"
 		},
 		"./styled-mixin": {
 			"default": "./src/styled-mixin.ts",
