--- a/packages/integrations/kitajs/tsconfig.json
+++ b/packages/integrations/kitajs/tsconfig.json
@@ -11,7 +11,7 @@
 		"jsx": "react-jsx",
 		"jsxImportSource": "@kitajs/html",
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"noImplicitOverride": true,
 		"plugins": [
 			{
@@ -22,7 +22,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ES2021",
-		"types": ["bun-types", "@ecopages/core"],
+		"types": ["bun-types"],
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true
 	}
