feature(#78) Added rapidhash for quick hashing using Bun.hash, externalized as an util for future improvements that possibly do not require bun

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -86,6 +86,10 @@
 		"./css": {
 			"import": "./src/utils/css.ts",
 			"require": "./src/utils/css.ts"
+		},
+		"./hash": {
+			"import": "./src/utils/hash.ts",
+			"require": "./src/utils/hash.ts"
 		}
 	}
 }
