--- a/packages/processors/postcss-processor/tsconfig.json
+++ b/packages/processors/postcss-processor/tsconfig.json
@@ -7,7 +7,7 @@
 		"outDir": "./dist",
 		"esModuleInterop": true,
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"noImplicitOverride": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
