--- a/examples/starter-ghtml/package.json
+++ b/examples/starter-ghtml/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@latest",
 		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/radiant": "latest",
 		"@ecopages/scripts-injector": "latest"
 	}
