--- a/examples/starter-react/package.json
+++ b/examples/starter-react/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@latest",
 		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/radiant": "latest",
 		"@ecopages/react": "npm:@jsr/ecopages__react@latest",
 		"@types/react": "^19.0.0",
