--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,7 +21,8 @@
 	"dependencies": {
 		"@ecopages/logger": "latest",
 		"@parcel/watcher": "^2.4.0",
-		"ghtml": "^3.1.2"
+		"ghtml": "^3.1.2",
+		"@ecopages/postcss-processor": "workspace:*"
 	},
 	"devDependencies": {
 		"bun-types": "latest"
