--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,7 +22,7 @@
 		"@ecopages/logger": "latest",
 		"@parcel/watcher": "^2.4.0",
 		"ghtml": "^3.1.2",
-		"@ecopages/postcss-processor": "workspace:*"
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest"
 	},
 	"devDependencies": {
 		"bun-types": "latest"
