--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,8 +21,7 @@
 	"dependencies": {
 		"@ecopages/logger": "latest",
 		"@parcel/watcher": "^2.4.0",
-		"ghtml": "^3.1.2",
-		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@0.1.26"
+		"ghtml": "^3.1.2"
 	},
 	"devDependencies": {
 		"bun-types": "latest"
