--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
 		"dev:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global dev",
 		"build:playground-global": "bun run --filter @ecopages/playground-global build",
 		"start:playground-global": "bun run --filter @ecopages/playground-global start",
-		"preview:playground-global": "bun run --filter @ecopages/playground-global preview",
+		"preview:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global preview",
 		"watch:dev:playground-manual": "bun run --elide-lines 0 --filter @ecopages/playground-manual watch:dev",
 		"dev:playground-manual": "bun run --elide-lines 0 --filter @ecopages/playground-manual dev",
 		"build:playground-manual": "bun run --filter @ecopages/playground-manual build",
 		"start:playground-manual": "bun run --filter @ecopages/playground-manual start",
-		"preview:playground-manual": "bun run --filter @ecopages/playground-manual preview",
+		"preview:playground-manual": "bun run --elide-lines 0 --filter @ecopages/playground-manual preview",
 		"watch:dev:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react watch:dev",
 		"dev:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react dev",
 		"build:playground-react": "bun run --filter @ecopages/playground-react build",
 		"start:playground-react": "bun run --filter @ecopages/playground-react start",
-		"preview:playground-react": "bun run --filter @ecopages/playground-react preview",
+		"preview:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react preview",
 		"dev:docs": "bun run --elide-lines 0 --filter @ecopages/docs dev",
 		"build:docs": "bun run --filter @ecopages/docs build",
 		"start:docs": "bun run --filter @ecopages/docs start",
