--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -68,6 +68,10 @@
 			"types": "./src/utils/invariant.ts",
 			"default": "./src/utils/invariant.ts"
 		},
+		"./utils/parse-cli-args": {
+			"types": "./src/utils/parse-cli-args.ts",
+			"default": "./src/utils/parse-cli-args.ts"
+		},
 		"./utils/component-dependencies-utils": {
 			"types": "./src/utils/component-dependencies-utils.ts",
 			"default": "./src/utils/component-dependencies-utils.ts"
