--- a/packages/processors/image-processor/package.json
+++ b/packages/processors/image-processor/package.json
@@ -19,7 +19,7 @@
 		"@ecopages/core": "workspace:*"
 	},
 	"dependencies": {
-		"@ecopages/logger": "^0.2.0",
+		"@ecopages/logger": "latest",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"sharp": "^0.33.5"
