--- a/playground/manual/package.json
+++ b/playground/manual/package.json
@@ -2,6 +2,7 @@
 	"name": "@ecopages/playground-manual",
 	"private": true,
 	"scripts": {
+		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/bin/ecopages --watch",
 		"start": "bun run server.ts",
 		"dev": "bun run server.ts --watch",
 		"preview": "bun run server.ts --preview",
