--- a/playground/manual/package.json
+++ b/playground/manual/package.json
@@ -19,6 +19,7 @@
 		"@ecopages/postcss-processor": "workspace:*",
 		"@ecopages/bun-mdx-kitajs-loader": "workspace:*",
 		"@ecopages/bun-postcss-loader": "workspace:*",
+		"@faker-js/faker": "^9.7.0",
 		"@types/alpinejs": "^3.13.6",
 		"alpinejs": "^3.13.10",
 		"shiki": "^1.1.2"
