--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,6 +44,10 @@
 			"types": "./src/adapters/bun/hmr.ts",
 			"default": "./src/adapters/bun/hmr.ts"
 		},
+		"./adapters/bun/create-app": {
+			"types": "./src/adapters/bun/create-app.ts",
+			"default": "./src/adapters/bun/create-app.ts"
+		},
 		"./adapters/bun/server-adapter": {
 			"types": "./src/adapters/bun/server-adapter.ts",
 			"default": "./src/adapters/bun/server-adapter.ts"
