--- a/playground/react/package.json
+++ b/playground/react/package.json
@@ -2,7 +2,7 @@
 	"name": "@ecopages/playground-react",
 	"private": true,
 	"scripts": {
-		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/bin/ecopages --watch",
+		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/bin/ecopages --dev",
 		"dev": "ecopages dev",
 		"build": "NODE_ENV=production ecopages build",
 		"start": "NODE_ENV=production ecopages start",
