--- a/playground/manual/package.json
+++ b/playground/manual/package.json
@@ -2,11 +2,11 @@
 	"name": "@ecopages/playground-manual",
 	"private": true,
 	"scripts": {
-		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/bin/ecopages --dev",
 		"start": "bun run server.ts",
 		"dev": "bun run server.ts --dev",
+		"watch:dev": "bun --watch run server.ts --dev",
 		"preview": "bun run server.ts --preview",
-		"build": "bun run build.ts --build"
+		"build": "bun run server.ts --build"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
