--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 		"build:playground-global": "bun run --filter @ecopages/playground-global build",
 		"start:playground-global": "bun run --filter @ecopages/playground-global start",
 		"preview:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global preview",
-		"watch:dev:playground-manual": "bun run --elide-lines 0 --filter @ecopages/playground-manual watch:dev",
-		"dev:playground-manual": "bun run --elide-lines 0 --filter @ecopages/playground-manual dev",
-		"build:playground-manual": "bun run --filter @ecopages/playground-manual build",
-		"start:playground-manual": "bun run --filter @ecopages/playground-manual start",
-		"preview:playground-manual": "bun run --elide-lines 0 --filter @ecopages/playground-manual preview",
+		"watch:manual:dev:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global watch:manual:dev",
+		"dev:manual:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global dev:manual",
+		"build:manual:playground-global": "bun run --filter @ecopages/playground-global build:manual",
+		"start:manual:playground-global": "bun run --filter @ecopages/playground-global start:manual",
+		"preview:manual:playground-global": "bun run --elide-lines 0 --filter @ecopages/playground-global preview:manual",
 		"watch:dev:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react watch:dev",
 		"dev:playground-react": "bun run --elide-lines 0 --filter @ecopages/playground-react dev",
 		"build:playground-react": "bun run --filter @ecopages/playground-react build",
