feature(81) Added app.ts and relative scripts to all examples and playground

--- a/examples/starter-ghtml/tsconfig.json
+++ b/examples/starter-ghtml/tsconfig.json
@@ -6,7 +6,7 @@
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"noImplicitOverride": true,
 		"paths": {
 			"@/*": ["./src/*"]
@@ -15,7 +15,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ES2021",
-		"types": ["bun-types", "@ecopages/core"],
+		"types": ["bun-types"],
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true
 	}
