--- a/examples/starter-react/package.json
+++ b/examples/starter-react/package.json
@@ -2,11 +2,11 @@
 	"name": "@ecopages/starter-react",
 	"private": true,
 	"scripts": {
-		"dev": "ecopages dev",
-		"build": "NODE_ENV=production ecopages build",
-		"start": "NODE_ENV=production ecopages start",
-		"preview": "NODE_ENV=production ecopages preview",
-		"postinstall": "bunx symlink-dir node_modules/@ecopages/core/src/bin/ecopages.js node_modules/.bin/ecopages"
+		"start": "bun run app.ts",
+		"dev": "bun run app.ts --dev",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
+		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
 		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@latest",
