--- a/playground/global/package.json
+++ b/playground/global/package.json
@@ -2,16 +2,11 @@
 	"name": "@ecopages/playground-global",
 	"private": true,
 	"scripts": {
-		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/bin/ecopages --dev",
-		"dev": "ecopages dev",
-		"build": "ecopages build",
-		"start": "ecopages start",
-		"preview": "ecopages preview",
-		"watch:manual:dev": "bun --watch run server.ts --dev",
-		"dev:manual": "bun run server.ts --dev",
-		"build:manual": "bun run server.ts --build",
-		"start:manual": "bun run server.ts",
-		"preview:manual": "bun run server.ts --preview"
+		"start": "bun run app.ts",
+		"dev": "bun run app.ts --dev",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
+		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
