--- a/playground/react/package.json
+++ b/playground/react/package.json
@@ -2,11 +2,11 @@
 	"name": "@ecopages/playground-react",
 	"private": true,
 	"scripts": {
-		"watch:dev": "bun --watch ../../node_modules/@ecopages/core/src/bin/ecopages --dev",
-		"dev": "ecopages dev",
-		"build": "ecopages build",
-		"start": "ecopages start",
-		"preview": "ecopages preview"
+		"start": "bun run app.ts",
+		"dev": "bun run app.ts --dev",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
+		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
