--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -2,10 +2,11 @@
 	"name": "@ecopages/docs",
 	"private": true,
 	"scripts": {
-		"dev": "ecopages dev",
-		"build": "ecopages build",
-		"start": "ecopages start",
-		"preview": "ecopages preview"
+		"start": "bun run app.ts",
+		"dev": "bun run app.ts --dev",
+		"build": "bun run app.ts --build",
+		"preview": "bun run app.ts --preview",
+		"watch:dev": "bun --watch run app.ts --dev"
 	},
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
