--- a/playground/react/.gitignore
+++ b/playground/react/.gitignore
@@ -1,8 +1,10 @@
 # dependencies
 /node_modules
 
-# production
+# ecopages
 .eco
+.cache
+.generated
 
 # build
 public/js
@@ -24,4 +26,3 @@ public/js
 **/*.tgz
 **/*.log
 **/*.bun
-
